--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title></title>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
-  <body>
 
+  <body>
+    <h1>Discover hidden places in the world around you</h1>
   </body>
+
 </html>
