--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
   </head>
 
   <body>
+    <!-- Allows links go to top of page without refreshing -->
+    <a name="top"></a>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="">Download Excursion (Coming Soon)</a></p>
+    <p class="links"><a href="#top">Download Excursion (Coming Soon)</a></p>
     <video autoplay loop>
       <source src="./resources/videos/excursion.mp4" type="video/mp4">
     </video>
     <h2>Your personal travel guide</h2>
-    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <p><img src="./resources/images/camp.jpg"></p>
-    <p><img src="./resources/images/phone.png"></p>
+    <p class="interest">Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p class="image"><img src="./resources/images/camp.jpg"></p>
+    <p class="image"><img src="./resources/images/phone.png"></p>
     <h2>Coming Soon for iPhone and Android</h2>
-    <p><a href="">Download Excursion (Coming Soon)</a></p>
-    <p>&copy; Excursion</p>
+    <p class="links"><a href="#top">Download Excursion (Coming Soon)</a></p>
+    <p id="copy">&copy; Excursion</p>
   </body>
 
 </html>
