--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <a name="top"></a>
     <h1>Discover hidden places in the world around you</h1>
     <p class="links"><a href="#top">Download Excursion (Coming Soon)</a></p>
-    <video autoplay loop>
-      <source src="./resources/videos/excursion.mp4" type="video/mp4">
-    </video>
+    <!-- Video -->
+    <p class="video"><video autoplay="" loop=""><source src="./resources/videos/excursion.mp4" type="video/mp4"></video></p>
     <h2>Your personal travel guide</h2>
     <p class="interest">Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p class="image"><img src="./resources/images/camp.jpg"></p>
