--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <!-- Allows links go to top of page without refreshing -->
+    <!-- Allows links to go to top of page without refreshing -->
     <a name="top"></a>
     <h1>Discover hidden places in the world around you</h1>
     <p class="links"><a href="#top">Download Excursion (Coming Soon)</a></p>
@@ -15,6 +15,7 @@
     <p class="video"><video autoplay="" loop=""><source src="./resources/videos/excursion.mp4" type="video/mp4"></video></p>
     <h2>Your personal travel guide</h2>
     <p class="interest">Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <!-- Images -->
     <p class="image"><img src="./resources/images/camp.jpg"></p>
     <p class="image"><img src="./resources/images/phone.png"></p>
     <h2>Coming Soon for iPhone and Android</h2>
