--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Allows links to go to top of page without refreshing -->
     <a name="top"></a>
     <h1>Discover hidden places in the world around you</h1>
-    <p class="links"><a href="#top">Download Excursion (Coming Soon)</a></p>
+    <p><a href="#top" class="link">Download Excursion (Coming Soon)</a></p>
     <!-- Video -->
     <p class="video"><video autoplay="" loop=""><source src="./resources/videos/excursion.mp4" type="video/mp4"></video></p>
     <h2>Your personal travel guide</h2>
@@ -19,7 +19,8 @@
     <p class="image"><img src="./resources/images/camp.jpg"></p>
     <p class="image"><img src="./resources/images/phone.png"></p>
     <h2>Coming Soon for iPhone and Android</h2>
-    <p class="links"><a href="#top">Download Excursion (Coming Soon)</a></p>
+    <p><a href="#top" class="link">Download Excursion (Coming Soon)</a></p>
+    <!-- Copyright Symbol -->
     <p id="copy">&copy; Excursion</p>
   </body>
 
