--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 
   <body>
     <!-- Allows links to go to top of page without refreshing -->
-    <a name="top"></a>
+    <a name="#"></a>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="#top" class="link">Download Excursion (Coming Soon)</a></p>
+    <p><a href="#" class="link">Download Excursion (Coming Soon)</a></p>
     <!-- Video -->
-    <p class="video"><video autoplay="" loop=""><source src="./resources/videos/excursion.mp4" type="video/mp4"></video></p>
+    <p id="video"><video autoplay="" loop=""><source src="./resources/videos/excursion.mp4" type="video/mp4"></video></p>
     <h2>Your personal travel guide</h2>
     <p class="interest">Excursion remembers places you like, and recommends new points of interest around you.</p>
     <!-- Images -->
     <p class="image"><img src="./resources/images/camp.jpg"></p>
     <p class="image"><img src="./resources/images/phone.png"></p>
     <h2>Coming Soon for iPhone and Android</h2>
-    <p><a href="#top" class="link">Download Excursion (Coming Soon)</a></p>
+    <p><a href="#" class="link">Download Excursion (Coming Soon)</a></p>
     <!-- Copyright Symbol -->
     <p id="copy">&copy; Excursion</p>
   </body>
