--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   </head>
 
   <body>
-    <!-- Allows links to go to top of page without refreshing -->
-
     <h1>Discover hidden places in the world around you</h1>
+    <!-- '#' gets links to go to top of page without refreshing -->
     <p><a href="#" class="link">Download Excursion (Coming Soon)</a></p>
     <!-- Video -->
     <p id="video"><video autoplay="" loop=""><source src="./resources/videos/excursion.mp4" type="video/mp4"></video></p>
